--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-bootstrap": "^1.4.3",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.1.0",
+    "react-skills-bars": "^1.0.0-development",
     "styled-components": "^5.2.1",
     "styled-icons": "^10.27.0"
   },
