--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "@loadable/component": "^5.14.1",
     "babel-plugin-styled-components": "^1.12.0",
     "bootstrap": "^4.6.0",
     "gatsby": "^2.26.1",
